# langguaphQA

./: .gitignore  README.md
backend/: .env.example  graph.py  llm.py  main.py  models.py  pyproject.toml  requirements.txt  state.py
frontend/: index.html  survey-default.json
